[package]
name = "md_rust"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.92"
js-sys = "0.3.69"
web-sys = { version = "0.3.69", features = ["Window", "Storage"] }
serde_json = "1.0.114"
serde = { version = "1.0.197", features = ["derive"] }

[dev-dependencies]
wasm-bindgen-test = "0.3.0"
